04_Deploying/09-03_Dashboard/k8s/app-svc.yaml
# Exercise 09-03 v2.2.1
#
---
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app-ns
  labels:
    app: app-app
    tier: appserver
spec:
  selector:
    pod: app-pod
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
