04_Deploying/09-03_Dashboard/k8s/app-ing.yaml
# Exercise 09-03 v2.2.1
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ing 
  namespace: app-ns
spec:
  ingressClassName: nginx
  rules:
    - host: app.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app-svc 
                port:
                  number: 8080
